infrastructure/home-assistant/endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-auto
spec:
  ports:
    - port: 8123
      targetPort: 8123
---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
  namespace: home-auto
subsets:
  - addresses:
      - ip: 192.168.0.102
    ports:
      - port: 8123
