infrastructure/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-auto
spec:
  ports:
    - port: 8123
      targetPort: 8123
