infrastructure/home-assistant/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-auto
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.jklu-lab.eu`)
      kind: Rule
      services:
        - kind: TraefikService
          name: home-assistant-external
          port: 8123
  tls: {}
